chore: simplified logic for pack uploads on server